[package]
name = "stor"
version = "0.1.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
description = "Helpers for genericising over storage types"
repository = "https://github.com/ryankurte/rust-stor"
homepage = "https://github.com/ryankurte/rust-stor"
license = "MPL-2.0"
edition = "2021"

[features]
alloc = []

default = [ "alloc", "heapless" ]

[dependencies]
heapless = { version = "0.7.9", optional = true }
